# videoPlayer

./: Android.mk  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  test_lib.cpp
include/: videoaddressInterface.h
src/: 61gequ.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  abc.xml  babycenter.cpp~  cmake_install.cmake  cntv.cpp  education_portal.cpp  encode.h  funshion.cpp  funshioncopy  iqiyi.cpp  joy.cpp  kankan.cpp  kankancopy.cpp  ku6.cpp  letv.cpp  letvcopy  make  mfengyun.cpp  pcbaby.cpp  pps.cpp  pptv.cpp  sina.cpp  sohu.cpp  testJson.cpp  tudou.cpp  utility.cpp  video  videoaddress.cpp  videoaddressInterface.cpp  videofactory.cpp  videofactory.h  wasu.cpp  youku.cpp  youtube.cpp.backup
src/include/: urlcode.h  utility.h  videoaddress.h  videoaddress.h~  videoaddress.h~~
src/json/: CMakeLists.txt  Makefile  cmake_install.cmake
